--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Mesto</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="normalize.css">
+    <link rel="stylesheet" href="./pages/index.css">
 </head>
 
 <body>
@@ -21,11 +20,11 @@
                 <div class="profile__info">
                     <div class="profile__title">
                         <h1 class="profile__usermane">Жак-Ив Кусто</h1>
-                        <button class="button button_type_edit" type="button"></button>
+                        <button class="profile__edit-button" type="button"></button>
                     </div>
                     <p class="profile__about">Исследователь океана</p>
                 </div>
-                <button class="button button_type_add" type="button"></button>
+                <button class="profile__add-button" type="button"></button>
             </section>
             <section class="elements">
                 <li class="element">
@@ -76,17 +75,16 @@
             <p class="footer__copyright">©&nbsp;2023 Mesto Russia</p>
         </footer>
         <div class="popup">
-            <div class="popup__wrapper">
-                <button class="popup__close" type="button"></button>
-                <h3 class="popup__title">Редактировать профиль</h3>
-                <form action="#" class="form popup__form">
-                    <input type="text" name="username" class="popup__input">
-                    <input type="text" name="about" class="popup__input">
-                    <button type="submit" class="form__submit">Сохранить</button>
-                </form>
-            </div>
+            <form name="popup" class="popup__container">
+                <p class="popup__title">Редактировать профиль</p>
+                <input name="name" class="popup__input" type="text">
+                <input name="job" class="popup__input" type="text">
+                <button type="submit" class="popup__save-button">Сохранить</button>
+                <button type="button" class="popup__close-button"></button>
+            </form>
+        </div>
     </div>
-    </div>
+    <script src="scripts/script.js"></script>
 </body>
 
 </html>
