--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 <form action="#" class="form popup__form">
                     <input type="text" name="username" class="popup__input popup__input_username">
                     <input type="text" name="job" class="popup__input popup__input_job">
-                    <button type="submit" class="popup__form_submit">Сохранить</button>
+                    <button type="submit" class="popup__form-submit">Сохранить</button>
                 </form>
             </div>
         </div>
