--- a/index.html
+++ b/index.html
@@ -32,42 +32,42 @@
                     <img src="./image/Карачаевск.jpg" alt="Карачаевск" class="element__img">
                     <div class="element__info">
                         <h2 class="element__title">Карачаевск</h2>
-                        <button class="button button_type_like" type="button"></button>
+                        <button class="element__button button_type_like" type="button"></button>
                     </div>
                 </li>
                 <li class="element">
                     <img src="./image/Эльбрус 1.png" alt="Эльбрус" class="element__img">
                     <div class="element__info">
                         <h2 class="element__title">Гора Эльбрус</h2>
-                        <button class="button button_type_like" type="button"></button>
+                        <button class="element__button button_type_like" type="button"></button>
                     </div>
                 </li>
                 <li class="element">
                     <img src="./image/Домбай.png" alt="Домбай" class="element__img">
                     <div class="element__info">
                         <h2 class="element__title">Домбай</h2>
-                        <button class="button button_type_like" type="button"></button>
+                        <button class="element__button button_type_like" type="button"></button>
                     </div>
                 </li>
                 <li class="element">
                     <img src="./image/Эльбрус 1.png" class="element__img">
                     <div class="element__info">
                         <h2 class="element__title">Гора Эльбрус</h2>
-                        <button class="button button_type_like" type="button"></button>
+                        <button class="element__button button_type_like" type="button"></button>
                     </div>
                 </li>
                 <li class="element">
                     <img src="./image/Домбай.png" alt="Домбай" class="element__img">
                     <div class="element__info">
                         <h2 class="element__title">Домбай</h2>
-                        <button class="button button_type_like" type="button"></button>
+                        <button class="element__button button_type_like" type="button"></button>
                     </div>
                 </li>
                 <li class="element">
                     <img src="./image/Карачаевск.jpg" alt="Карачаевск" class="element__img">
                     <div class="element__info">
                         <h2 class="element__title">Карачаево-Черкессия</h2>
-                        <button class="button button_type_like" type="button"></button>
+                        <button class="element__button button_type_like" type="button"></button>
                     </div>
                 </li>
             </section>
@@ -79,9 +79,9 @@
             <div class="popup__wrapper">
                 <button class="popup__close" type="button"></button>
                 <h3 class="popup__title">Редактировать профиль</h3>
-                <form action="#" class="form popup__form">
-                    <input type="text" name="username" class="popup__input popup__input_username">
-                    <input type="text" name="job" class="popup__input popup__input_job">
+                <form action="#" name="form" class="form popup__form">
+                    <input type="text" name="username" class="popup__input popup__input_type_username">
+                    <input type="text" name="job" class="popup__input popup__input_type_job">
                     <button type="submit" class="popup__form-submit">Сохранить</button>
                 </form>
             </div>
