--- a/index.html
+++ b/index.html
@@ -32,42 +32,42 @@
                     <img src="./image/Карачаевск.jpg" alt="Карачаевск" class="element__img">
                     <div class="element__info">
                         <h2 class="element__title">Карачаевск</h2>
-                        <button class="element__button button_type_like" type="button"></button>
+                        <button class="element__button element__button_type_like" type="button"></button>
                     </div>
                 </li>
                 <li class="element">
                     <img src="./image/Эльбрус 1.png" alt="Эльбрус" class="element__img">
                     <div class="element__info">
                         <h2 class="element__title">Гора Эльбрус</h2>
-                        <button class="element__button button_type_like" type="button"></button>
+                        <button class="element__button element__button_type_like" type="button"></button>
                     </div>
                 </li>
                 <li class="element">
                     <img src="./image/Домбай.png" alt="Домбай" class="element__img">
                     <div class="element__info">
                         <h2 class="element__title">Домбай</h2>
-                        <button class="element__button button_type_like" type="button"></button>
+                        <button class="element__button element__button_type_like" type="button"></button>
                     </div>
                 </li>
                 <li class="element">
                     <img src="./image/Эльбрус 1.png" class="element__img">
                     <div class="element__info">
                         <h2 class="element__title">Гора Эльбрус</h2>
-                        <button class="element__button button_type_like" type="button"></button>
+                        <button class="element__button element__button_type_like" type="button"></button>
                     </div>
                 </li>
                 <li class="element">
                     <img src="./image/Домбай.png" alt="Домбай" class="element__img">
                     <div class="element__info">
                         <h2 class="element__title">Домбай</h2>
-                        <button class="element__button button_type_like" type="button"></button>
+                        <button class="element__button element__button_type_like" type="button"></button>
                     </div>
                 </li>
                 <li class="element">
                     <img src="./image/Карачаевск.jpg" alt="Карачаевск" class="element__img">
                     <div class="element__info">
                         <h2 class="element__title">Карачаево-Черкессия</h2>
-                        <button class="element__button button_type_like" type="button"></button>
+                        <button class="element__button element__button_type_like" type="button"></button>
                     </div>
                 </li>
             </section>
