fix: исправлены недочеты после проверки ревьера

--- a/index.html
+++ b/index.html
@@ -28,48 +28,48 @@
                 <button class="profile__add-button" type="button"></button>
             </section>
             <section class="elements">
-                <li class="element">
+                <div class="element">
                     <img src="./image/Карачаевск.jpg" alt="Карачаевск" class="element__img">
                     <div class="element__info">
                         <h2 class="element__title">Карачаевск</h2>
-                        <button class="element__button element__button_type_like" type="button"></button>
+                        <button class="element__button" type="button"></button>
                     </div>
-                </li>
-                <li class="element">
-                    <img src="./image/Эльбрус 1.png" alt="Эльбрус" class="element__img">
+                </div>
+                <div class="element">
+                    <img src="./image/Эльбрус1.png" alt="Эльбрус" class="element__img">
                     <div class="element__info">
                         <h2 class="element__title">Гора Эльбрус</h2>
-                        <button class="element__button element__button_type_like" type="button"></button>
+                        <button class="element__button" type="button"></button>
                     </div>
-                </li>
-                <li class="element">
+                </div>
+                <div class="element">
                     <img src="./image/Домбай.png" alt="Домбай" class="element__img">
                     <div class="element__info">
                         <h2 class="element__title">Домбай</h2>
-                        <button class="element__button element__button_type_like" type="button"></button>
+                        <button class="element__button" type="button"></button>
                     </div>
-                </li>
-                <li class="element">
-                    <img src="./image/Эльбрус 1.png" class="element__img">
+                </div>
+                <div class="element">
+                    <img src="./image/Эльбрус1.png" alt="Эльбрус" class="element__img">
                     <div class="element__info">
                         <h2 class="element__title">Гора Эльбрус</h2>
-                        <button class="element__button element__button_type_like" type="button"></button>
+                        <button class="element__button" type="button"></button>
                     </div>
-                </li>
-                <li class="element">
+                </div>
+                <div class="element">
                     <img src="./image/Домбай.png" alt="Домбай" class="element__img">
                     <div class="element__info">
                         <h2 class="element__title">Домбай</h2>
-                        <button class="element__button element__button_type_like" type="button"></button>
+                        <button class="element__button" type="button"></button>
                     </div>
-                </li>
-                <li class="element">
+                </div>
+                <div class="element">
                     <img src="./image/Карачаевск.jpg" alt="Карачаевск" class="element__img">
                     <div class="element__info">
                         <h2 class="element__title">Карачаево-Черкессия</h2>
-                        <button class="element__button element__button_type_like" type="button"></button>
+                        <button class="element__button" type="button"></button>
                     </div>
-                </li>
+                </div>
             </section>
         </main>
         <footer class="footer">
