--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8"> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mesto</title>
-    <link rel="stylesheet" href="/pages/index.css">
+    <link rel="stylesheet" href="./pages/index.css">
 
 </head>
 
@@ -88,7 +88,7 @@
             </div>
         </div>
     </div>
-    <script src="/scripts/script.js"></script>
+    <script src="./scripts/script.js"></script>
 </body>
 
 </html>
