--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             </section>
             <section class="elements">
                 <div class="element">
+                    <button type="button" class="element__delete"></button>
                     <img src="./image/Карачаевск.jpg" alt="Карачаевск" class="element__img">
                     <div class="element__info">
                         <h2 class="element__title">Карачаевск</h2>
@@ -37,6 +38,7 @@
                     </div>
                 </div>
                 <div class="element">
+                    <button type="button" class="element__delete"></button>
                     <img src="./image/Эльбрус1.png" alt="Эльбрус" class="element__img">
                     <div class="element__info">
                         <h2 class="element__title">Гора Эльбрус</h2>
@@ -44,6 +46,7 @@
                     </div>
                 </div>
                 <div class="element">
+                    <button type="button" class="element__delete"></button>
                     <img src="./image/Домбай.png" alt="Домбай" class="element__img">
                     <div class="element__info">
                         <h2 class="element__title">Домбай</h2>
@@ -51,6 +54,7 @@
                     </div>
                 </div>
                 <div class="element">
+                    <button type="button" class="element__delete"></button>
                     <img src="./image/Эльбрус1.png" alt="Эльбрус" class="element__img">
                     <div class="element__info">
                         <h2 class="element__title">Гора Эльбрус</h2>
@@ -58,6 +62,7 @@
                     </div>
                 </div>
                 <div class="element">
+                    <button type="button" class="element__delete"></button>
                     <img src="./image/Домбай.png" alt="Домбай" class="element__img">
                     <div class="element__info">
                         <h2 class="element__title">Домбай</h2>
@@ -65,6 +70,7 @@
                     </div>
                 </div>
                 <div class="element">
+                    <button type="button" class="element__delete"></button>
                     <img src="./image/Карачаевск.jpg" alt="Карачаевск" class="element__img">
                     <div class="element__info">
                         <h2 class="element__title">Карачаево-Черкессия</h2>
@@ -76,7 +82,8 @@
         <footer class="footer">
             <p class="footer__copyright">©&nbsp;2023 Mesto Russia</p>
         </footer>
-        <div class="popup">
+
+        <div class="popup popup_edit">
             <div class="popup__wrapper">
                 <button class="popup__close" type="button"></button>
                 <h3 class="popup__title">Редактировать профиль</h3>
@@ -84,6 +91,17 @@
                     <input type="text" name="username" class="popup__input popup__input_type_username">
                     <input type="text" name="job" class="popup__input popup__input_type_job">
                     <button type="submit" class="popup__form-submit">Сохранить</button>
+                </form>
+            </div>
+        </div>
+        <div class="popup-add">
+            <div class="popup-add__wrapper">
+                <button class="popup-add__close" type="button"></button>
+                <h3 class="popup-add__title">Новое место</h3>
+                <form action="#" name="form" class="form popup__form">
+                    <input type="text" name="title" class="popup__input popup__input_type_title">
+                    <input type="text" name="link" class="popup__input popup__input_type_link">
+                    <button type="submit" class="popup__form-submit">Создать</button>
                 </form>
             </div>
         </div>
