--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <meta charset="UTF-8"> 
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mesto</title>
     <link rel="stylesheet" href="./pages/index.css">
@@ -30,52 +30,6 @@
             </section>
             <section class="elements">
                 <div class="element">
-                    <button type="button" class="element__delete"></button>
-                    <img src="./image/Карачаевск.jpg" alt="Карачаевск" class="element__img">
-                    <div class="element__info">
-                        <h2 class="element__title">Карачаевск</h2>
-                        <button class="element__button" type="button"></button>
-                    </div>
-                </div>
-                <div class="element">
-                    <button type="button" class="element__delete"></button>
-                    <img src="./image/Эльбрус1.png" alt="Эльбрус" class="element__img">
-                    <div class="element__info">
-                        <h2 class="element__title">Гора Эльбрус</h2>
-                        <button class="element__button" type="button"></button>
-                    </div>
-                </div>
-                <div class="element">
-                    <button type="button" class="element__delete"></button>
-                    <img src="./image/Домбай.png" alt="Домбай" class="element__img">
-                    <div class="element__info">
-                        <h2 class="element__title">Домбай</h2>
-                        <button class="element__button" type="button"></button>
-                    </div>
-                </div>
-                <div class="element">
-                    <button type="button" class="element__delete"></button>
-                    <img src="./image/Эльбрус1.png" alt="Эльбрус" class="element__img">
-                    <div class="element__info">
-                        <h2 class="element__title">Гора Эльбрус</h2>
-                        <button class="element__button" type="button"></button>
-                    </div>
-                </div>
-                <div class="element">
-                    <button type="button" class="element__delete"></button>
-                    <img src="./image/Домбай.png" alt="Домбай" class="element__img">
-                    <div class="element__info">
-                        <h2 class="element__title">Домбай</h2>
-                        <button class="element__button" type="button"></button>
-                    </div>
-                </div>
-                <div class="element">
-                    <button type="button" class="element__delete"></button>
-                    <img src="./image/Карачаевск.jpg" alt="Карачаевск" class="element__img">
-                    <div class="element__info">
-                        <h2 class="element__title">Карачаево-Черкессия</h2>
-                        <button class="element__button" type="button"></button>
-                    </div>
                 </div>
             </section>
         </main>
@@ -99,13 +53,35 @@
                 <button class="popup-add__close" type="button"></button>
                 <h3 class="popup-add__title">Новое место</h3>
                 <form action="#" name="form" class="form popup__form">
-                    <input type="text" name="title" class="popup__input popup__input_type_title">
-                    <input type="text" name="link" class="popup__input popup__input_type_link">
+                    <input type="text" name="title" class="popup__input popup__input_type_title" placeholder="Название">
+                    <input type="text" name="link" class="popup__input popup__input_type_link" placeholder="Ссылка на картинку">
                     <button type="submit" class="popup__form-submit">Создать</button>
                 </form>
             </div>
         </div>
+        <div class="popup-image">
+            <div class="popup-image__wrapper">
+                <button type="button" class="popup-image__close"
+                    aria-label="Кнопка закрытия окна просмотра фотографии"></button>
+                <img class="popup-image__photo" src="./image/Карачаевск.jpg" alt="Фотография места">
+                <h2 class="popup-image__caption">Карачаево-Черкесcия</h2>
+            </div>
+        </div>
     </div>
+
+
+    <template id="element-template">
+        <div class="element">
+            <button type="button" class="element__delete"></button>
+            <img class="element__img" src="" alt="">
+            <div class="element__info">
+                <h2 class="element__title"></h2>
+                <button class="element__button" type="button"></button>
+            </div>
+        </div>
+    </template>
+
+
     <script src="./scripts/script.js"></script>
 </body>
 
