--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <p class="footer__copyright">©&nbsp;2023 Mesto Russia</p>
         </footer>
 
-        <div class="popup popup_edit">
+        <div class="popup">
             <div class="popup__wrapper">
                 <button class="popup__close" type="button"></button>
                 <h3 class="popup__title">Редактировать профиль</h3>
@@ -54,7 +54,8 @@
                 <h3 class="popup-add__title">Новое место</h3>
                 <form action="#" name="form" class="form popup__form">
                     <input type="text" name="title" class="popup__input popup__input_type_title" placeholder="Название">
-                    <input type="text" name="link" class="popup__input popup__input_type_link" placeholder="Ссылка на картинку">
+                    <input type="text" name="link" class="popup__input popup__input_type_link"
+                        placeholder="Ссылка на картинку">
                     <button type="submit" class="popup__form-submit">Создать</button>
                 </form>
             </div>
@@ -68,8 +69,6 @@
             </div>
         </div>
     </div>
-
-
     <template id="element-template">
         <div class="element">
             <button type="button" class="element__delete"></button>
