--- a/index.html
+++ b/index.html
@@ -62,8 +62,7 @@
         </div>
         <div class="popup-image">
             <div class="popup-image__wrapper">
-                <button type="button" class="popup-image__close"
-                    aria-label="Кнопка закрытия окна просмотра фотографии"></button>
+                <button type="button" class="popup-image__close"></button>
                 <img class="popup-image__photo" src="./image/Карачаевск.jpg" alt="Фотография места">
                 <h2 class="popup-image__caption">Карачаево-Черкесcия</h2>
             </div>
