--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <template id="element-template">
         <div class="element">
             <button type="button" class="element__delete"></button>
-            <img class="element__img" src="" alt="">
+            <img class="element__img" src="#" alt="">
             <div class="element__info">
                 <h2 class="element__title"></h2>
                 <button class="element__button" type="button"></button>
