--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
                 </form>
             </div>
         </div>
-        <div class="popup-add">
-            <div class="popup-add__wrapper">
-                <button class="popup-add__close" type="button"></button>
-                <h3 class="popup-add__title">Новое место</h3>
+        <div class="popup popup_add">
+            <div class="popup__wrapper">
+                <button class="popup__close popup__close_add" type="button"></button>
+                <h3 class="popup__title">Новое место</h3>
                 <form action="#" name="form" class="form popup__form">
                     <input type="text" name="title" class="popup__input popup__input_type_title" placeholder="Название">
                     <input type="text" name="link" class="popup__input popup__input_type_link"
@@ -60,11 +60,11 @@
                 </form>
             </div>
         </div>
-        <div class="popup-image">
-            <div class="popup-image__wrapper">
-                <button type="button" class="popup-image__close"></button>
-                <img class="popup-image__photo" src="./image/Карачаевск.jpg" alt="Фотография места">
-                <h2 class="popup-image__caption">Карачаево-Черкесcия</h2>
+        <div class="popup popup_image">
+            <div class="popup__wrapper_image">
+                <button type="button" class="popup__close popup__close_image"></button>
+                <img class="popup__photo" src="./image/Карачаевск.jpg" alt="Фотография места">
+                <h2 class="popup__caption">Карачаево-Черкесcия</h2>
             </div>
         </div>
     </div>
