--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             </div>
         </div>
         <div class="popup popup_image">
-            <div class="popup__wrapper_image">
+            <div class="popup__container">
                 <button type="button" class="popup__close popup__close_image"></button>
                 <img class="popup__photo" src="./image/Карачаевск.jpg" alt="Фотография места">
                 <h2 class="popup__caption">Карачаево-Черкесcия</h2>
