--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mesto</title>
     <link rel="stylesheet" href="./pages/index.css">
+    
 
 </head>
 
@@ -35,20 +36,22 @@
             <p class="footer__copyright">©&nbsp;2023 Mesto Russia</p>
         </footer>
 
-        <div class="popup">
+        <div class="popup popup_edit">
             <div class="popup__wrapper">
                 <button class="popup__close" type="button"></button>
                 <h3 class="popup__title">Редактировать профиль</h3>
                 <form action="#" name="form" class="form popup__form">
-                    <input type="text" name="username" placeholder="Имя" class="popup__input popup__input_type_username" required>
-                    <input type="text" name="job" placeholder="О себе" class="popup__input popup__input_type_job" required>
+                    <input type="text" name="username" placeholder="Имя" class="popup__input popup__input_type_username"
+                        required>
+                    <input type="text" name="job" placeholder="О себе" class="popup__input popup__input_type_job"
+                        required>
                     <button type="submit" class="popup__form-submit">Сохранить</button>
                 </form>
             </div>
         </div>
         <div class="popup popup_add">
             <div class="popup__wrapper">
-                <button class="popup__close popup__close_add" type="button"></button>
+                <button class="popup__close" type="button"></button>
                 <h3 class="popup__title">Новое место</h3>
                 <form action="#" name="form" class="form popup__form">
                     <input type="text" name="title" class="popup__input popup__input_type_title" placeholder="Название">
@@ -59,7 +62,7 @@
             </div>
         </div>
         <div class="popup popup_image">
-            <div class="popup__container">
+            <div class="popup__wrapper_image">
                 <button type="button" class="popup__close popup__close_image"></button>
                 <img class="popup__photo" src="./image/Карачаевск.jpg" alt="Фотография места">
                 <h2 class="popup__caption">Карачаево-Черкесcия</h2>
