--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
                 <button class="popup__close" type="button"></button>
                 <h3 class="popup__title">Новое место</h3>
                 <form action="#" name="form" class="form popup__form">
-                    <input id="title" type="text" name="title" class="popup__input popup__input_type_title" placeholder="Название"
-                        required autocomplete="off" minlength="2" maxlength="30">
+                    <input id="title" type="text" name="title" class="popup__input popup__input_type_title"
+                        placeholder="Название" required autocomplete="off" minlength="2" maxlength="30">
                     <span class="popup__input-error" id="title-error"></span>
                     <input id="link" type="url" name="link" class="popup__input popup__input_type_link"
                         placeholder="Ссылка на картинку" required>
@@ -68,15 +68,15 @@
         <div class="popup popup_image">
             <div class="popup__container">
                 <button type="button" class="popup__close popup__close_image"></button>
-                <img class="popup__photo" src="./image/Карачаевск.jpg" alt="Фотография места">
-                <h2 class="popup__caption">Карачаево-Черкесcия</h2>
+                <img class="popup__photo" src="#" alt=" ">
+                <h2 class="popup__caption"></h2>
             </div>
         </div>
     </div>
     <template id="element-template">
         <div class="element">
             <button type="button" class="element__delete"></button>
-            <img class="element__img" src="#" alt="Фотография места">
+            <img class="element__img" src="#" alt="">
             <div class="element__info">
                 <h2 class="element__title"></h2>
                 <button class="element__button" type="button"></button>
