--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div class="popup__wrapper">
                 <button class="popup__close" type="button"></button>
                 <h3 class="popup__title">Редактировать профиль</h3>
-                <form action="#" name="form" class="form popup__form">
+                <form action="#" name="form" class="form popup__form" novalidate>
                     <input type="text" name="username" placeholder="Имя" class="popup__input popup__input_type_username"
                         required autocomplete="off" minlength="2" maxlength="40">
                     <span class="popup__input-error" id="username-error"></span>
@@ -54,7 +54,7 @@
             <div class="popup__wrapper">
                 <button class="popup__close" type="button"></button>
                 <h3 class="popup__title">Новое место</h3>
-                <form action="#" name="form" class="form popup__form">
+                <form action="#" name="form" class="form popup__form" novalidate>
                     <input id="title" type="text" name="title" class="popup__input popup__input_type_title"
                         placeholder="Название" required autocomplete="off" minlength="2" maxlength="30">
                     <span class="popup__input-error" id="title-error"></span>
