fix: исправлены замечания ревьюера

--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
                 <button class="popup__close" type="button"></button>
                 <h3 class="popup__title">Редактировать профиль</h3>
                 <form action="#" name="form" class="form popup__form" novalidate>
-                    <input type="text" name="username" placeholder="Имя" class="popup__input popup__input_type_username"
+                    <input id="username" type="text" name="username" placeholder="Имя" class="popup__input popup__input_type_username"
                         required autocomplete="off" minlength="2" maxlength="40">
                     <span class="popup__input-error" id="username-error"></span>
-                    <input type="text" name="job" placeholder="О себе" class="popup__input popup__input_type_job"
+                    <input id="job" type="text" name="job" placeholder="О себе" class="popup__input popup__input_type_job"
                         required autocomplete="off" minlength="2" maxlength="200">
                     <span class="popup__input-error" id="job-error"></span>
                     <button type="submit" class="popup__form-submit">Сохранить</button>
