--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             </div>
         </div>
     </div>
-    <template id="element-template">
+    <template id="element-template" class="element-template">
         <div class="element">
             <button type="button" class="element__delete"></button>
             <img class="element__img" src="#" alt="">
@@ -83,10 +83,9 @@
             </div>
         </div>
     </template>
-
-    <script src="./scripts/constants.js"></script>
-    <script src="./scripts/script.js" defer></script>
-    <script src="./scripts/validate.js"></script>
+    <script type="module" src="./scripts/index.js" defer></script>
+    <script type="module" src="./scripts/Card.js"></script>
+    <script type="module" src="./scripts/FormValidator.js"></script>
 </body>
 
 </html>
