--- a/index.html
+++ b/index.html
@@ -83,9 +83,10 @@
             </div>
         </div>
     </template>
-    <script type="module" src="./scripts/index.js" defer></script>
+    <script type="module" src="./scripts/index.js"></script>
     <script type="module" src="./scripts/Card.js"></script>
     <script type="module" src="./scripts/FormValidator.js"></script>
+    <script type="module" src="./scripts/initialCards.js"></script>
 </body>
 
 </html>
