--- a/index.html
+++ b/index.html
@@ -40,11 +40,13 @@
                 <button class="popup__close" type="button"></button>
                 <h3 class="popup__title">Редактировать профиль</h3>
                 <form action="#" name="form" class="form popup__form" novalidate>
-                    <input id="username" type="text" name="username" placeholder="Имя" class="popup__input popup__input_type_username"
-                        required autocomplete="off" minlength="2" maxlength="40">
+                    <input id="username" type="text" name="username" placeholder="Имя"
+                        class="popup__input popup__input_type_username" required autocomplete="off" minlength="2"
+                        maxlength="40">
                     <span class="popup__input-error" id="username-error"></span>
-                    <input id="job" type="text" name="job" placeholder="О себе" class="popup__input popup__input_type_job"
-                        required autocomplete="off" minlength="2" maxlength="200">
+                    <input id="job" type="text" name="job" placeholder="О себе"
+                        class="popup__input popup__input_type_job" required autocomplete="off" minlength="2"
+                        maxlength="200">
                     <span class="popup__input-error" id="job-error"></span>
                     <button type="submit" class="popup__form-submit">Сохранить</button>
                 </form>
@@ -84,9 +86,9 @@
         </div>
     </template>
     <script type="module" src="./scripts/index.js"></script>
-    <script type="module" src="./scripts/Card.js"></script>
+    <!-- <script type="module" src="./scripts/Card.js"></script>
     <script type="module" src="./scripts/FormValidator.js"></script>
-    <script type="module" src="./scripts/initialCards.js"></script>
+    <script type="module" src="./scripts/initialCards.js"></script> -->
 </body>
 
 </html>
