--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
                         <h1 class="profile__usermane">Жак-Ив Кусто</h1>
                         <button class="profile__edit-button" type="button" aria-label="Редактирование профиля"></button>
                     </div>
-                    <p class="profile__about">Исследователь океана</p>
+                    <p class="profile__about">Я искренне не знаю как исправить это, помогите, пожалуйста</p>
                 </div>
                 <button class="profile__add-button" type="button"></button>
             </section>
@@ -78,7 +78,10 @@
             <img class="element__img" src="#" alt="">
             <div class="element__info">
                 <h2 class="element__title"></h2>
-                <button class="element__button" type="button"></button>
+                <div class="element__button-container">
+                    <button class="element__button" type="button"></button>
+                    <p class="element__button-amount">0</p>
+                </div>
             </div>
         </div>
     </template>
