--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
                         <h1 class="profile__usermane">Жак-Ив Кусто</h1>
                         <button class="profile__edit-button" type="button" aria-label="Редактирование профиля"></button>
                     </div>
-                    <p class="profile__about">Я искренне не знаю как исправить это, помогите, пожалуйста</p>
+                    <p class="profile__about">Исследователь океана</p>
                 </div>
                 <button class="profile__add-button" type="button"></button>
             </section>
