--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
         <main class="content">
             <section class="profile">
                 <div class="profile__avatar-page">
+                    <button type="button" class="profile__avatar-edit-button" aria-label="Кнопка изменения аватара"></button>
                     <img src="<%=require('./image/image.jpg')%>" alt="Аватарка" class="profile__avatar">
                 </div>
                 <div class="profile__info">
@@ -69,6 +70,29 @@
                 <button type="button" class="popup__close popup__close_image"></button>
                 <img class="popup__photo" src="#" alt=" ">
                 <h2 class="popup__caption"></h2>
+            </div>
+        </div>
+        <div class="popup popup_confirm">
+            <div class="popup__wrapper">
+                <button type="button" class="popup__close" aria-label="Кнопка закрытия окна подтверждения"></button>
+                <h2 class="popup__title">Вы уверены?</h2>
+                <form class="form popup__form" name="confirm-form" action="#" method="get">
+                    <button type="submit" class="popup__form-submit" aria-label="Кнопка подтверждения удаления фото">
+                        Да</button>
+                </form>
+            </div>
+        </div>
+        <div class="popup popup_avatar">
+            <div class="popup__wrapper">
+                <button type="button" class="popup__close" aria-label="Кнопка закрытия окна изменения аватара"></button>
+                <h2 class="popup__title">Обновить аватар</h2>
+                <form class="form popup__form" name="avatar-form" action="#" method="get">
+                    <input id="link" type="url" name="link" class="popup__input popup__input_type_lin"
+                        autocomplete="off" required value="" placeholder="Ссылка на картинку" />
+                    <span id="link-error" class="popup__input-error"></span>
+                    <button type="submit" class="popup__form-submit" aria-label="Кнопка сохранения нового аватара">
+                        Сохранить</button>
+                </form>
             </div>
         </div>
     </div>
