--- a/src/index.html
+++ b/src/index.html
@@ -87,9 +87,9 @@
                 <button type="button" class="popup__close" aria-label="Кнопка закрытия окна изменения аватара"></button>
                 <h2 class="popup__title">Обновить аватар</h2>
                 <form class="form popup__form" name="avatar-form" action="#" method="get">
-                    <input id="link" type="url" name="link" class="popup__input popup__input_type_lin"
+                    <input id="avatar" type="url" name="link" class="popup__input popup__input_type_lin"
                         autocomplete="off" required value="" placeholder="Ссылка на картинку" />
-                    <span id="link-error" class="popup__input-error"></span>
+                    <span id="avatar-error" class="popup__input-error"></span>
                     <button type="submit" class="popup__form-submit" aria-label="Кнопка сохранения нового аватара">
                         Сохранить</button>
                 </form>
