--- a/src/index.html
+++ b/src/index.html
@@ -16,8 +16,8 @@
             <section class="profile">
                 <div class="profile__avatar-page">
                     <button type="button" class="profile__avatar-edit-button" aria-label="Кнопка изменения аватара"></button>
-                    <img src="<%=require('./image/image.jpg')%>" alt="Аватарка" class="profile__avatar">
-                </div>
+                    <img class="profile__avatar" src="<%=require('./image/image.jpg')%>" alt="Аватарка">
+                  </div>
                 <div class="profile__info">
                     <div class="profile__title">
                         <h1 class="profile__usermane">Жак-Ив Кусто</h1>
@@ -76,7 +76,7 @@
             <div class="popup__wrapper">
                 <button type="button" class="popup__close" aria-label="Кнопка закрытия окна подтверждения"></button>
                 <h2 class="popup__title">Вы уверены?</h2>
-                <form class="form popup__form" name="confirm-form" action="#" method="get">
+                <form class="form" name="confirm-form" action="#" method="get">
                     <button type="submit" class="popup__form-submit" aria-label="Кнопка подтверждения удаления фото">
                         Да</button>
                 </form>
@@ -87,9 +87,9 @@
                 <button type="button" class="popup__close" aria-label="Кнопка закрытия окна изменения аватара"></button>
                 <h2 class="popup__title">Обновить аватар</h2>
                 <form class="form popup__form" name="avatar-form" action="#" method="get">
-                    <input id="avatar" type="url" name="link" class="popup__input popup__input_type_lin"
+                    <input id="link" type="url" name="link" class="popup__input popup__input_value_link"
                         autocomplete="off" required value="" placeholder="Ссылка на картинку" />
-                    <span id="avatar-error" class="popup__input-error"></span>
+                    <span id="link-error" class="popup__input-error"></span>
                     <button type="submit" class="popup__form-submit" aria-label="Кнопка сохранения нового аватара">
                         Сохранить</button>
                 </form>
